Gradle tasks extended