@@ -86,11 +86,8 @@ compileJava {
     }
 }
 
-run {
-    doFirst {
-        jvmArgs = [
-                '--module-path', classpath.asPath,
-                '--add-modules', 'javafx.controls,javafx.graphics,javafx.base,javafx.fxml,javafx.web,javafx.swing,javafx.media',
+// see https://github.com/kelemen/netbeans-gradle-project/issues/403 on how to extend gradle tasks
+def newArgs = [ '--add-modules', 'javafx.controls,javafx.graphics,javafx.base,javafx.fxml,javafx.web,javafx.swing,javafx.media',
                 // various exports needed at run time - see https://stackoverflow.com/a/52142071
                 '--add-exports', 'javafx.graphics/com.sun.javafx.util=ALL-UNNAMED',
                 '--add-exports', 'javafx.base/com.sun.javafx.reflect=ALL-UNNAMED',
@@ -107,7 +104,13 @@ run {
                 '--add-exports', 'javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
                 '--add-exports', 'javafx.controls/com.sun.javafx.scene.control.inputmap=ALL-UNNAMED',
                 '--add-exports', 'javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED',
-        ]
+    ]
+    
+// extend Netbeans Gradle "Run" task
+run {
+    doFirst {
+        jvmArgs = jvmArgs.plus(['--module-path', classpath.asPath,])
+        jvmArgs = jvmArgs.plus(newArgs)
     }
 }
 
@@ -116,27 +119,11 @@ task(debug, dependsOn: 'classes', type: JavaExec) {
     doFirst {
         main = 'tf.gpx.edit.main.GPXEditorManager'
         classpath = sourceSets.main.runtimeClasspath
-        jvmArgs = [
+        jvmArgs = jvmArgs.plus([
                 '--module-path', classpath.asPath,
-                '--add-modules', 'javafx.controls,javafx.graphics,javafx.base,javafx.fxml,javafx.web,javafx.swing,javafx.media',
-                // various exports needed at run time - see https://stackoverflow.com/a/52142071
-                '--add-exports', 'javafx.graphics/com.sun.javafx.util=ALL-UNNAMED',
-                '--add-exports', 'javafx.base/com.sun.javafx.reflect=ALL-UNNAMED',
-                '--add-exports', 'javafx.base/com.sun.javafx.beans=ALL-UNNAMED',
-                '--add-exports', 'javafx.base/com.sun.javafx.logging=ALL-UNNAMED',
-                '--add-exports', 'javafx.base/com.sun.javafx.runtime=ALL-UNNAMED',
-                '--add-exports', 'javafx.base/com.sun.javafx.collections=ALL-UNNAMED',
-                '--add-exports', 'javafx.graphics/com.sun.prism=ALL-UNNAMED',
-                '--add-exports', 'javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED',
-                '--add-exports', 'javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
-                '--add-exports', 'javafx.media/com.sun.media.jfxmedia=ALL-UNNAMED',
-                '--add-exports', 'javafx.media/com.sun.media.jfxmedia.events=ALL-UNNAMED',
-                '--add-exports', 'javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
-                '--add-exports', 'javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
-                '--add-exports', 'javafx.controls/com.sun.javafx.scene.control.inputmap=ALL-UNNAMED',
-                '--add-exports', 'javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED',
                 "-Xdebug",
-                "-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005"
-        ]
+                "-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005",
+        ])
+        jvmArgs = jvmArgs.plus(newArgs)
     }
 }
